--- a/Project-Pet-Spa/src/main/resources/application.properties
+++ b/Project-Pet-Spa/src/main/resources/application.properties
@@ -7,9 +7,8 @@ logging.level.root=INFO
 spring.datasource.url=jdbc:mysql://localhost/pet_spa?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=123456
 
-server.port= 7777
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
