--- a/Project-Pet-Spa/src/main/resources/application.properties
+++ b/Project-Pet-Spa/src/main/resources/application.properties
@@ -7,13 +7,13 @@ logging.level.root=INFO
 spring.datasource.url=jdbc:mysql://localhost/pet_spa?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 
 spring.datasource.username=root
-spring.datasource.password=123456
-
+spring.datasource.password=
+server.port=7777
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.datasource.initialization-mode=always
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
