--- a/Project-Pet-Spa/src/main/resources/application.properties
+++ b/Project-Pet-Spa/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.port=7777
 
 
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=123456
 
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
