--- a/Project-Pet-Spa/src/main/resources/application.properties
+++ b/Project-Pet-Spa/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.servlet.multipart.max-request-size=215MB
 file.upload-dir=D://temp//
 
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=
 
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
